--- a/miniProgram/pages/home/home.wxml
+++ b/miniProgram/pages/home/home.wxml
@@ -3,6 +3,9 @@
   <view>姓名：{{item.name}}</view>
   <view>年龄：{{item.age}}</view>
   <view>城市：{{item.city}}</view>
+  <view class="outerImg">
+  <image src="{{item.imgUrl}}" mode="widthFix"  class="img"/>
+  </view>
 </view>
 <button bindtap="refeshData">更新数据</button>
 <button bindtap="reBack">返回管理界面</button>
